Ihelio/2024 07 11/refactor functions to work with frontend (#20)
* update the project

* update the gitignore

* update the jooq version and generate code

* feat: refactor the functions to work with frontend